--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "grunt-jscs": "~0.8.1",
     "jshint-stylish": "~1.0.0",
     "matchdep": "^0.3.0"
+  },
+  "dependencies": {
+    "lodash": "^3.7.0"
   }
 }
