--- a/dockerfiles/rsync/Dockerfile
+++ b/dockerfiles/rsync/Dockerfile
@@ -1,11 +1,8 @@
 # docker build -t kalabox/git .
 
-FROM kalabox/git:stable
+FROM kalabox/debian:stable
 
 RUN \
-  apt-get update && \
-  apt-get install -y rsync && \
-  apt-get clean -y && \
   mkdir -p /usr/local/bin && \
   mkdir -p /root/.ssh
 
@@ -14,5 +11,4 @@ COPY ssh-config /root/.ssh/config
 
 RUN chmod +x /usr/local/bin/krsync
 
-WORKDIR /data
 ENTRYPOINT ["/usr/local/bin/krsync"]
